singularity/jobs/error2284321.err
  File "/corticalflow/predict.py", line 276
    print(pred_verts_white[-1])
        ^
SyntaxError: invalid syntax
